# optix

./: CMakeLists.txt  Lidar.cpp  Lidar.h  LidarData.cpp  LidarData.h  LidarDescription.h  LidarRayGenerator.cpp  LidarRayGenerator.h  RayGeneratorClass.cpp  RayGeneratorClass.h  SensorData.cpp  SensorData.h  SensorDescription.h  complie.sh  main.cpp
common/: RadarRayGenerator.cu  RadarRayGenerator.cuh  RadarRayGenerator.ptx  RayGenerator.cu  RayGenerator.cuh  RayGenerator.ptx  generatePTX.sh
cuda/: CalculateLidarRay.cu  CalculateLidarRay.cuh  generateLib.sh
